<resources>
    <string name="app_name">AJs Clockwork</string>
    <string name="tab_text_1">Clock</string>
    <string name="tab_text_2">Timer</string>
    <string name="tab_text_3">Stopwatch</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login">Login</string>
    <string name="loginpage">loginpage</string>
    <string name="register">Register</string>
    <string name="next">next</string>
    <string name="name">Name:</string>

    <string name="email">Email:</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="submit">Submit</string>

    <string name="enter_your_name">Enter your name</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="create_a_password">Create a password</string>
    <string name="create_a_username">Create a username</string>
    <string name="quit">Quit</string>
    <string name="settings">Settings</string>
</resources>
