<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewEmail"
        app:layout_constraintEnd_toStartOf="@+id/register_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="354dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="16dp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="196dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/register_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="16dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPassword"
        app:layout_constraintEnd_toStartOf="@+id/register_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="121dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="16dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toStartOf="@+id/register_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="219dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="218dp"
        android:ems="10"
        android:hint="@string/create_a_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/create_a_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewUsername"
        app:layout_constraintTop_toTopOf="@+id/textViewUsername" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:layout_marginStart="137dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textViewUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/register_name" />


</android.support.constraint.ConstraintLayout>
