<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView android:layout_height="138dp"
        android:layout_width="276dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="100sp"
        android:text="@string/login"
        android:inputType="textPersonName"
        android:hint="@string/loginpage"
        android:ems="10"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginStart="8dp"
        android:id="@+id/editText"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:layout_marginEnd="84dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="164dp"/>

    <Button
        android:id="@+id/NavToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.449" />

    <Button android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/next"
        android:layout_marginEnd="84dp"
        android:layout_marginTop="8dp"
        android:id="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.412"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginStart="8dp"
        android:id="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>